# cadmpeg

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LEGAL.md  README.md  SECURITY.md  clippy.toml  dist-workspace.toml  rfc-catia-codec-refactor.md  rfc-deepen-nx-native-extraction.md  rust-toolchain.toml
crates/cadmpeg/: Cargo.toml  README.md
crates/cadmpeg-codec-catia/: CALIBRATION.md  Cargo.toml  README.md  parser-manifest.toml
crates/cadmpeg-codec-catia/src/: analytic.rs  assemble.rs  b5.rs  b5_record_class.rs  b5_transfer.rs  catalog.rs  container.rs  decode.rs  design.rs  e5.rs  entity_table.rs  fuzz.rs  geometry.rs  ledger.rs  lib.rs  loss.rs  native.rs  nurbs.rs  object_graph.rs  tests.rs  tickets.rs  topology.rs  value_block.rs  variant.rs  zero_entity.rs
crates/cadmpeg-codec-creo/: CALIBRATION.md  Cargo.toml  README.md  parser-manifest.toml
crates/cadmpeg-codec-creo/src/: builder.rs  compress.rs  container.rs  curve.rs  datum.rs  decode.rs  feature.rs  fidelity.rs  lib.rs  loss.rs  placement.rs  primdata.rs  psb.rs  reference.rs  scalar.rs  surface.rs  tests.rs  topology.rs
crates/cadmpeg-codec-f3d/: Cargo.toml  README.md  calibration-notes.md  parser-manifest.toml
crates/cadmpeg-codec-f3d/examples/: dbg_conics.rs  dbg_corner.rs  inspect_design.rs
crates/cadmpeg-codec-f3d/src/: act.rs  asm_header.rs  brep.rs  builder.rs  bytes.rs  container.rs  decode.rs  design.rs  f3z.rs  fidelity.rs  history.rs  history_records.rs  ids.rs  lib.rs  loss.rs  materials.rs  native.rs  nurbs.rs  protein.rs  records.rs  sab.rs  tests.rs  tsm.rs  validate.rs  writer.rs  xref.rs
crates/cadmpeg-codec-freecad/: Cargo.toml  README.md
crates/cadmpeg-codec-freecad/examples/: source_less.rs
crates/cadmpeg-codec-freecad/src/: annotation.rs  application.rs  application_geometry.rs  attachment.rs  brep.rs  builder.rs  container.rs  design.rs  drawing.rs  element_map.rs  gui.rs  joint.rs  lib.rs  loss.rs  mutation.rs  native.rs  persistence.rs  product.rs  tests.rs  topology_transfer.rs  writer.rs
crates/cadmpeg-codec-iges/: Cargo.toml
crates/cadmpeg-codec-iges/src/: byte_ledger.rs  card.rs  directory.rs  global.rs  graph.rs  layout.rs  lib.rs  loss.rs  native.rs  parameter.rs  profile.rs  reader.rs  tests.rs
crates/cadmpeg-codec-nx/: Cargo.toml  README.md  calibration-notes.md  parser-manifest.toml
crates/cadmpeg-codec-nx/src/: accounting.rs  container.rs  decode.rs  deltas.rs  geometry.rs  intersection.rs  jt.rs  jt_topology.rs  lib.rs  loss.rs  native.rs  nurbs.rs  om.rs  om_tokens.rs  parasolid.rs  test_support.rs  tests.rs  topology.rs
crates/cadmpeg-codec-rhino/: CALIBRATION.md  Cargo.toml  README.md  parser-manifest.toml
crates/cadmpeg-codec-rhino/src/: accounting.rs  annotations.rs  archive_test_support.rs  archive_tests.rs  brep.rs  cage.rs  chunks.rs  container.rs  curve_on_surface.rs  curves.rs  decode.rs  detail.rs  dimensions.rs  document_data.rs  extrusion.rs  fidelity.rs  fuzzing.rs  hatch.rs  history.rs  instances.rs  lib.rs  loss.rs  mesh.rs  morph.rs  objects.rs  polyedge.rs  presentation.rs  product.rs  settings.rs  subd.rs  surfaces.rs  tests.rs  views.rs  wire.rs  writer.rs
crates/cadmpeg-codec-sldprt/: Cargo.toml  README.md  calibration-note.md  parser-calibration.md  parser-manifest.toml
crates/cadmpeg-codec-sldprt/src/: annotations.rs  appearance.rs  brep.rs  builder.rs  classification.rs  compound.rs  container.rs  decode.rs  feature_schema.rs  fidelity.rs  fuzzing.rs  history.rs  lib.rs  loss.rs  metadata.rs  native.rs  parasolid.rs  pmi.rs  records.rs  resolved_features.rs  tessellation.rs  tests.rs  writer.rs  writer_patch.rs  writer_transform.rs
crates/cadmpeg-codec-sldprt/tests/: spatial_write.rs
crates/cadmpeg-fuzz/: .gitattributes  Cargo.toml  README.md  run-targets.sh
crates/cadmpeg-fuzz/dictionaries/: catia_b5.dict  nx_om.dict  step_writer.dict
crates/cadmpeg-fuzz/fuzz_targets/: catia_a5_surfaces.rs  catia_a8_surfaces.rs  catia_b5.rs  catia_catalog.rs  catia_container.rs  catia_container_dir.rs  catia_e5.rs  catia_e5_orientation.rs  catia_geometry_surfaces.rs  catia_geometry_vertices.rs  catia_object_graph.rs  catia_strict_salvage.rs  catia_topology.rs  catia_value_block.rs  catia_zero_entity.rs  creo_compact_int.rs  creo_container.rs  creo_container_scan.rs  creo_curve_prototypes.rs  creo_datum.rs  creo_psb_tokens.rs  creo_scalar.rs  creo_short_form_float.rs  creo_strict_salvage.rs  creo_surface_rows.rs  decode_pipeline_mutated.rs  f3d_asm_header.rs  f3d_container.rs  f3d_decode_modes.rs  f3d_nurbs_curves.rs  f3d_nurbs_pcurves.rs  f3d_nurbs_surfaces.rs  f3d_roundtrip.rs  f3d_sab_frame.rs  f3d_writer.rs  fcstd_auxiliary.rs  fcstd_brep.rs  fcstd_container.rs  fcstd_decode.rs  fcstd_element_map.rs  (+47 more)
crates/cadmpeg-harness/: Cargo.toml
crates/cadmpeg-harness/baselines/: phase2-performance-gate.md  stage1.json
crates/cadmpeg-harness/src/: baseline.rs  boundary.rs  driver.rs  execute.rs  fixtures.rs  lib.rs  limits.rs  model.rs  oracle.rs  stage2.rs  sweep.rs
crates/cadmpeg-harness/tests/: gate.rs  stage2_gates.rs  stage2_report.rs  sweep.rs
crates/cadmpeg-ir/: Cargo.toml  README.md  cursor-reference-ratchet.toml  parser-manifest.toml  window-egress-ratchet.toml
crates/cadmpeg-ir/examples/: emit_cube.rs
crates/cadmpeg-ir/src/: annotations.rs  appearance.rs  attributes.rs  be.rs  byte_ledger.rs  bytes.rs  codec.rs  compression.rs  container.rs  cursor.rs  design.rs  diff.rs  document.rs  drawings.rs  eval.rs  examples.rs  features.rs  geometry.rs  history.rs  ids.rs  le.rs  lib.rs  math.rs  parasolid.rs  pmi.rs  presentation.rs  product.rs  products.rs  provenance.rs  read.rs  report.rs  reserved.rs  semantic_annotations.rs  sketches.rs  source_fidelity.rs  source_fidelity_diff.rs  spreadsheets.rs  subd.rs  tessellation.rs  tests.rs  (+6 more)
crates/cadmpeg-ir/tests/: cursor_reference_ratchet.rs  manifest_completeness.rs  window_egress_ratchet.rs
crates/cadmpeg-step/: Cargo.toml  README.md
crates/cadmpeg-step/benches/: step_pipeline.rs
crates/cadmpeg-step/src/: entity_table.rs  lex.rs  (+8 more)
(+1410 files in other folders)
