# SPDX-License-Identifier: Apache-2.0
[workspace]
resolver = "2"
members = [
  "crates/cadmpeg",
  "crates/cadmpeg-ir",
  "crates/cadmpeg-codec-f3d",
  "crates/cadmpeg-codec-sldprt",
  "crates/cadmpeg-codec-catia",
  "crates/cadmpeg-codec-creo",
  "crates/cadmpeg-codec-nx",
  "crates/cadmpeg-step",
]
# cadmpeg-fuzz is intentionally excluded: cargo-fuzz targets link libFuzzer and
# require a nightly toolchain, so keeping the crate out of the default workspace
# members lets `cargo build --workspace` / `cargo test --workspace` stay green on
# stable. Build fuzz targets explicitly with `cargo +nightly fuzz run <target>`.
exclude = ["crates/cadmpeg-fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cadmpeg/cadmpeg"
rust-version = "1.82"

[workspace.dependencies]
cadmpeg-ir = { path = "crates/cadmpeg-ir" }
cadmpeg-codec-f3d = { path = "crates/cadmpeg-codec-f3d" }
cadmpeg-codec-sldprt = { path = "crates/cadmpeg-codec-sldprt" }
cadmpeg-codec-catia = { path = "crates/cadmpeg-codec-catia" }
cadmpeg-codec-creo = { path = "crates/cadmpeg-codec-creo" }
cadmpeg-codec-nx = { path = "crates/cadmpeg-codec-nx" }
cadmpeg-step = { path = "crates/cadmpeg-step" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate", "zstd"] }
flate2 = "1"
crc32fast = "1"
roxmltree = "0.20"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
