# SPDX-License-Identifier: Apache-2.0
[workspace]
resolver = "2"
members = [
  "crates/cadmpeg",
  "crates/cadmpeg-ir",
  "crates/cadmpeg-codec-f3d",
  "crates/cadmpeg-codec-freecad",
  "crates/cadmpeg-codec-sldprt",
  "crates/cadmpeg-codec-catia",
  "crates/cadmpeg-codec-creo",
  "crates/cadmpeg-codec-nx",
  "crates/cadmpeg-codec-rhino",
  "crates/cadmpeg-codec-iges",
  "crates/cadmpeg-step",
]
# cadmpeg-fuzz is intentionally excluded: cargo-fuzz targets link libFuzzer and
# require a nightly toolchain, so keeping the crate out of the default workspace
# members lets `cargo build --workspace` / `cargo test --workspace` stay green on
# stable. Build fuzz targets explicitly with `cargo +nightly fuzz run <target>`.
exclude = ["crates/cadmpeg-fuzz"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cadmpeg/cadmpeg"
homepage = "https://github.com/cadmpeg/cadmpeg"
rust-version = "1.88"

[workspace.dependencies]
cadmpeg-ir = { path = "crates/cadmpeg-ir", version = "0.2.0" }
cadmpeg-codec-f3d = { path = "crates/cadmpeg-codec-f3d", version = "0.2.0" }
cadmpeg-codec-freecad = { path = "crates/cadmpeg-codec-freecad", version = "0.2.0" }
cadmpeg-codec-sldprt = { path = "crates/cadmpeg-codec-sldprt", version = "0.2.0" }
cadmpeg-codec-catia = { path = "crates/cadmpeg-codec-catia", version = "0.2.0" }
cadmpeg-codec-creo = { path = "crates/cadmpeg-codec-creo", version = "0.2.0" }
cadmpeg-codec-nx = { path = "crates/cadmpeg-codec-nx", version = "0.2.0" }
cadmpeg-codec-rhino = { path = "crates/cadmpeg-codec-rhino", version = "0.2.0" }
cadmpeg-codec-iges = { path = "crates/cadmpeg-codec-iges", version = "0.2.0" }
cadmpeg-step = { path = "crates/cadmpeg-step", version = "0.2.0" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
serde-value = "0.7"
schemars = "1.2"
thiserror = "2"
sha2 = "0.11"
memchr = "2"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zip = { version = "8", default-features = false, features = ["deflate", "zstd"] }
flate2 = "1"
crc32fast = "1"
roxmltree = "0.21"
regex = "1.13"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
encoding_rs = "0.8"

[profile.release]
lto = "thin"
# Codecs parse untrusted files; a trapped overflow beats a wrapped offset
# that silently changes which bytes a decoder reads.
overflow-checks = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Shared lint policy. Crates opt in with `[lints] workspace = true`.
# CI escalates warnings to errors (`cargo clippy -- -D warnings -W missing-docs`);
# missing_docs stays a visible warning until the documentation debt is paid down.
[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Byte-offset decoder reality: the codecs are wall-to-wall u32/usize/f64
# conversions over file offsets and fixed-width records. Cast lints on this
# codebase are noise, not signal.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"

# Byte-exact roundtrip semantics: float equality against decoded values is
# intentional, not a rounding hazard.
float_cmp = "allow"

# Decoder ergonomics: long match-heavy decode functions and near-identical
# field names are the domain, not smells.
too_many_lines = "allow"
similar_names = "allow"
match_same_arms = "allow"
single_match_else = "allow"

# API-surface lints deferred alongside missing_docs.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# `clippy.toml` lists growth methods
# (`Vec::with_capacity`, `reserve`, `resize`, `repeat_n`, ...) that a decoder
# must not call on an unfloored, attacker-controlled count. The workspace
# workspace setting stays `allow` because some encoders and decoders use
# these methods with trusted counts. Hardened decoder modules re-enable the
# lint with `#![deny(clippy::disallowed_methods)]`.
disallowed_methods = "allow"

# Restriction picks: fail loudly instead of silently panicking or shipping
# debug scaffolding. Use `expect` with a message where infallibility is a
# real invariant; `unwrap` is reserved for tests.
unwrap_used = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Decoder modules deny these allocation methods where counts originate in
# untrusted payloads. Call sites must prove a physical byte floor before
# reserving or growing storage from a declared count.
