# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-catia"
description = "Decode supported CATIA V5 .CATPart content into cadmpeg's provenance-aware CAD IR with explicit loss reporting."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-catia"
keywords = ["cad", "catia", "catpart", "brep", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
sha2.workspace = true

[lints]
workspace = true
