# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-catia"
description = "Read geometry and topology from .CATPart files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-catia"
keywords = ["cad", "catia", "catpart", "brep", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[features]
# Exposes the `fuzz` facade of `()`-returning parser wrappers for `cadmpeg-fuzz`.
fuzz = []

[dependencies]
cadmpeg-ir.workspace = true
sha2.workspace = true
memchr.workspace = true
serde.workspace = true
schemars.workspace = true

[lints]
workspace = true
