# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-creo"
description = "Inspect Creo PSB .prt files and decode model-space datum planes."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-creo"
keywords = ["cad", "creo", "pro-engineer", "prt", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
serde.workspace = true
sha2.workspace = true
regex.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
