# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-f3d"
description = "Decode Autodesk Fusion 360 .f3d files into cadmpeg's provenance-aware CAD IR with explicit loss reporting."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-f3d"
keywords = ["cad", "fusion-360", "f3d", "brep", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
zip.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
