# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-f3d"
description = "Decode and encode Autodesk Fusion .f3d B-rep, design, and appearance data."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-f3d"
keywords = ["cad", "fusion-360", "f3d", "brep", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
zip.workspace = true
memchr.workspace = true
sha2.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-value.workspace = true
schemars.workspace = true
roxmltree.workspace = true

[dev-dependencies]
# Tests build `cadmpeg_ir::examples`; the feature keeps those fixtures out of
# the normal library build.
cadmpeg-ir = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
