# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-freecad"
description = "Read FreeCAD FCStd document archives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
cadmpeg-ir.workspace = true
serde.workspace = true
roxmltree.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
