# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-freecad"
description = "Read and write FreeCAD FCStd document archives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
cadmpeg-ir.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
roxmltree.workspace = true
zip.workspace = true

[dev-dependencies]
cadmpeg-step.workspace = true
tempfile.workspace = true

[[bin]]
name = "fcstd-profile"
path = "src/bin/fcstd_profile.rs"

[lints]
workspace = true
