# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-iges"
description = "Inspect and decode IGES 5.3 Fixed ASCII files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/cadmpeg-codec-iges"
keywords = ["cad", "iges", "geometry", "brep"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
toml = "0.9"

[lints]
workspace = true
