# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-nx"
description = "Decoder for Siemens NX .prt files: SPLMSSTR container enumeration, embedded Parasolid neutral-binary stream extraction, and topology/analytic-geometry decode with explicit loss reporting."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cadmpeg-ir.workspace = true
sha2.workspace = true
flate2.workspace = true

[dev-dependencies]
flate2.workspace = true

[lints]
workspace = true
