# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-nx"
description = "Read Parasolid geometry and topology from NX .prt files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-nx"
keywords = ["cad", "siemens-nx", "parasolid", "prt", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
sha2.workspace = true
flate2.workspace = true

[dev-dependencies]
flate2.workspace = true

[lints]
workspace = true
