# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-nx"
description = "Read Parasolid geometry and topology from NX .prt files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-nx"
keywords = ["cad", "siemens-nx", "parasolid", "prt", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
flate2.workspace = true
roxmltree.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
# Tests build `cadmpeg_ir::examples`; the feature keeps those fixtures out of
# the normal library build.
cadmpeg-ir = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
