# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-codec-sldprt"
description = "Read and write SolidWorks .sldprt part geometry, metadata, and feature records."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-codec-sldprt"
keywords = ["cad", "solidworks", "sldprt", "parasolid", "geometry"]
categories = ["encoding", "parser-implementations", "graphics"]

[dependencies]
cadmpeg-ir.workspace = true
sha2.workspace = true
thiserror.workspace = true
flate2.workspace = true
crc32fast.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
# Tests build `cadmpeg_ir::examples`; the feature keeps those fixtures out of
# the normal library build.
cadmpeg-ir = { workspace = true, features = ["test-support"] }

[features]
# Exposes `pub mod fuzzing`, thin wrappers that drive the crate-private `brep`
# leaf scanners so the fuzz crate can reach them without widening the stable API.
fuzzing = []

[lints]
workspace = true
