# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-fuzz"
version = "0.0.0"
description = "libFuzzer harnesses for cadmpeg codecs, IR operations, and STEP export"
edition = "2021"
license = "Apache-2.0"
publish = false

# `cargo-fuzz` builds this crate outside the repository workspace.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cadmpeg-codec-f3d = { path = "../cadmpeg-codec-f3d" }
cadmpeg-codec-freecad = { path = "../cadmpeg-codec-freecad" }
cadmpeg-codec-sldprt = { path = "../cadmpeg-codec-sldprt", features = ["fuzzing"] }
cadmpeg-codec-catia = { path = "../cadmpeg-codec-catia" }
cadmpeg-codec-creo = { path = "../cadmpeg-codec-creo" }
cadmpeg-codec-nx = { path = "../cadmpeg-codec-nx" }
cadmpeg-codec-rhino = { path = "../cadmpeg-codec-rhino", features = ["fuzzing"] }
cadmpeg-codec-iges = { path = "../cadmpeg-codec-iges" }
cadmpeg-ir = { path = "../cadmpeg-ir" }
cadmpeg-step = { path = "../cadmpeg-step" }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
crc32fast = "1"

[[bin]]
name = "generate_seeds"
path = "src/bin/generate_seeds.rs"

[[bin]]
name = "generate_comprehensive_seeds"
path = "src/bin/generate_comprehensive_seeds.rs"

[[bin]]
name = "generate_fcstd_seeds"
path = "src/bin/generate_fcstd_seeds.rs"

[[bin]]
name = "f3d_container"
path = "fuzz_targets/f3d_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "f3d_writer"
path = "fuzz_targets/f3d_writer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "f3d_roundtrip"
path = "fuzz_targets/f3d_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_container"
path = "fuzz_targets/fcstd_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_decode"
path = "fuzz_targets/fcstd_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_write"
path = "fuzz_targets/fcstd_write.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_xml"
path = "fuzz_targets/fcstd_xml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_gui"
path = "fuzz_targets/fcstd_gui.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_brep"
path = "fuzz_targets/fcstd_brep.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_element_map"
path = "fuzz_targets/fcstd_element_map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fcstd_auxiliary"
path = "fuzz_targets/fcstd_auxiliary.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sldprt_container"
path = "fuzz_targets/sldprt_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_container"
path = "fuzz_targets/catia_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_container"
path = "fuzz_targets/creo_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_container"
path = "fuzz_targets/nx_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_from_json"
path = "fuzz_targets/ir_from_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_validate"
path = "fuzz_targets/ir_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "step_writer"
path = "fuzz_targets/step_writer.rs"
test = false
doc = false
bench = false

# F3D parser targets
[[bin]]
name = "f3d_asm_header"
path = "fuzz_targets/f3d_asm_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "f3d_sab_frame"
path = "fuzz_targets/f3d_sab_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "f3d_nurbs_surfaces"
path = "fuzz_targets/f3d_nurbs_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "f3d_nurbs_curves"
path = "fuzz_targets/f3d_nurbs_curves.rs"
test = false
doc = false
bench = false

[[bin]]
name = "f3d_nurbs_pcurves"
path = "fuzz_targets/f3d_nurbs_pcurves.rs"
test = false
doc = false
bench = false

# SolidWorks parser targets
[[bin]]
name = "sldprt_parasolid"
path = "fuzz_targets/sldprt_parasolid.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sldprt_container_scan"
path = "fuzz_targets/sldprt_container_scan.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sldprt_spline_curves"
path = "fuzz_targets/sldprt_spline_curves.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sldprt_spline_surfaces"
path = "fuzz_targets/sldprt_spline_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sldprt_topology"
path = "fuzz_targets/sldprt_topology.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sldprt_entity"
path = "fuzz_targets/sldprt_entity.rs"
test = false
doc = false
bench = false

# CATIA parser targets
[[bin]]
name = "catia_geometry_vertices"
path = "fuzz_targets/catia_geometry_vertices.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_geometry_surfaces"
path = "fuzz_targets/catia_geometry_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_a8_surfaces"
path = "fuzz_targets/catia_a8_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_a5_surfaces"
path = "fuzz_targets/catia_a5_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_b5"
path = "fuzz_targets/catia_b5.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_e5"
path = "fuzz_targets/catia_e5.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_zero_entity"
path = "fuzz_targets/catia_zero_entity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_container_dir"
path = "fuzz_targets/catia_container_dir.rs"
test = false
doc = false
bench = false

# Creo parser targets
[[bin]]
name = "creo_psb_tokens"
path = "fuzz_targets/creo_psb_tokens.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_compact_int"
path = "fuzz_targets/creo_compact_int.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_short_form_float"
path = "fuzz_targets/creo_short_form_float.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_container_scan"
path = "fuzz_targets/creo_container_scan.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_surface_rows"
path = "fuzz_targets/creo_surface_rows.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_curve_prototypes"
path = "fuzz_targets/creo_curve_prototypes.rs"
test = false
doc = false
bench = false

# NX parser targets
[[bin]]
name = "nx_parasolid"
path = "fuzz_targets/nx_parasolid.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_geometry_points"
path = "fuzz_targets/nx_geometry_points.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_geometry_surfaces"
path = "fuzz_targets/nx_geometry_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_geometry_curves"
path = "fuzz_targets/nx_geometry_curves.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_nurbs_surfaces"
path = "fuzz_targets/nx_nurbs_surfaces.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_nurbs_curves"
path = "fuzz_targets/nx_nurbs_curves.rs"
test = false
doc = false
bench = false

# IR and STEP targets
[[bin]]
name = "step_lexer"
path = "fuzz_targets/step_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "step_parser"
path = "fuzz_targets/step_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "step_reader"
path = "fuzz_targets/step_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_diff"
path = "fuzz_targets/ir_diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_canonical_roundtrip"
path = "fuzz_targets/ir_canonical_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "step_writer_custom"
path = "fuzz_targets/step_writer_custom.rs"
test = false
doc = false
bench = false

# Mutating cross-layer targets
[[bin]]
name = "step_geometry_degenerate"
path = "fuzz_targets/step_geometry_degenerate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_validate_mutated"
path = "fuzz_targets/ir_validate_mutated.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_pipeline_mutated"
path = "fuzz_targets/decode_pipeline_mutated.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_e5_orientation"
path = "fuzz_targets/catia_e5_orientation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generate_all_seeds"
path = "src/bin/generate_all_seeds.rs"

[[bin]]
name = "generate_submodule_seeds"
path = "src/bin/generate_submodule_seeds.rs"

[[bin]]
name = "generate_rhino_seeds"
path = "src/bin/generate_rhino_seeds.rs"

[[bin]]
name = "generate_iges_seeds"
path = "src/bin/generate_iges_seeds.rs"

# Rhino parser targets
[[bin]]
name = "rhino_container"
path = "fuzz_targets/rhino_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "iges_container"
path = "fuzz_targets/iges_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_chunks"
path = "fuzz_targets/rhino_chunks.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_object_record"
path = "fuzz_targets/rhino_object_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_nurbs"
path = "fuzz_targets/rhino_nurbs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_mesh_buffer"
path = "fuzz_targets/rhino_mesh_buffer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_brep"
path = "fuzz_targets/rhino_brep.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_subd"
path = "fuzz_targets/rhino_subd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_cage"
path = "fuzz_targets/rhino_cage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_hatch"
path = "fuzz_targets/rhino_hatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rhino_polyedge"
path = "fuzz_targets/rhino_polyedge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_value_block"
path = "fuzz_targets/catia_value_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_catalog"
path = "fuzz_targets/catia_catalog.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_object_graph"
path = "fuzz_targets/catia_object_graph.rs"
test = false
doc = false
bench = false

[[bin]]
name = "catia_topology"
path = "fuzz_targets/catia_topology.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_datum"
path = "fuzz_targets/creo_datum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "creo_scalar"
path = "fuzz_targets/creo_scalar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_om"
path = "fuzz_targets/nx_om.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_topology"
path = "fuzz_targets/nx_topology.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_deltas"
path = "fuzz_targets/nx_deltas.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nx_intersection"
path = "fuzz_targets/nx_intersection.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
