# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-harness"
description = "Stage-1 subprocess oracle harness for cadmpeg codecs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cadmpeg-ir = { workspace = true }
cadmpeg-codec-f3d = { workspace = true }
cadmpeg-codec-sldprt = { workspace = true }
cadmpeg-codec-catia = { workspace = true }
cadmpeg-codec-creo = { workspace = true }
cadmpeg-codec-nx = { workspace = true }
cadmpeg-codec-rhino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "harness-runner"
path = "src/bin/harness-runner.rs"

[lints]
workspace = true
