# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-ir"
description = "Provenance-rich intermediate representation and codec contract for the cadmpeg CAD transcoder."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
sha2.workspace = true
