# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-ir"
description = "CAD data model, validation, diffing, and codec API for cadmpeg."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-ir"
keywords = ["cad", "brep", "geometry", "transcoding", "provenance"]
categories = ["data-structures", "encoding", "graphics"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true

[lints]
workspace = true
