# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-ir"
description = "CAD data model, validation, diffing, and codec API for cadmpeg."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-ir"
keywords = ["cad", "brep", "geometry", "transcoding", "provenance"]
categories = ["data-structures", "encoding", "graphics"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
flate2.workspace = true

[features]
# Exposes the hand-built `examples` fixtures to downstream test and tooling
# builds. Off by default so a normal library build omits them; enabled through
# a dev-dependency in crates whose tests use `cadmpeg_ir::examples`, and as a
# normal dependency feature in the fuzz seed generators.
test-support = []

# The example prints a fixture from `examples`, so it needs the gate enabled.
[[example]]
name = "emit_cube"
required-features = ["test-support"]

[lints]
workspace = true
