# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg-step"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Serialize cadmpeg IR documents as ISO 10303-21 STEP AP214 files."
readme = "README.md"
documentation = "https://docs.rs/cadmpeg-step"
keywords = ["cad", "step", "iso-10303", "ap214", "brep"]
categories = ["encoding", "graphics"]

[dependencies]
cadmpeg-ir = { workspace = true }
thiserror = { workspace = true }
encoding_rs = { workspace = true }

[dev-dependencies]
# Tests and the doctest build `cadmpeg_ir::examples`; the feature keeps those
# fixtures out of the normal library build.
cadmpeg-ir = { workspace = true, features = ["test-support"] }

[lints]
workspace = true

[[bench]]
name = "step_pipeline"
harness = false
